# hardware-helper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-app.yaml  build-installer.yml  build-portable.yml  build-rkdeveloptool.yaml  build.yml  installer.yml  package.yaml  portable.yml  release.yml
cmake/: build_libusb_mingw.sh  build_rkdev_msys.sh  copy_rkdev.cmake  libwdi_config.h.in  libwdi_configure.sh
packaging/ci/: README.md  ci-env.sh  package-cell.sh
packaging/linux/: README.md  bootstrap-build-deps.sh
packaging/macos/: README.md  bootstrap-build-deps.sh
packaging/windows/: README.md  bootstrap-build-deps.ps1  bootstrap-build-deps.sh  installer.nsi  windows-bash.cmd
src/: main.cpp  usb_driver_windows.cpp  usb_driver_windows.h  windows_driver.cpp  windows_driver.h
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  loader_map.rs  logging.rs  main.rs  paths.rs  platform.rs  rkdev.rs  usb.rs
src-tauri/src/platform/: flashing.rs  libusb_hotplug.rs
src-tauri/src/platform/linux/: usb.rs
src-tauri/src/platform/macos/: usb.rs
src-tauri/src/platform/windows/: usb.rs
src/core/: usb_monitor.cpp
src/ui/: index.html
ui/: app.css  app.js  index.html
